--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@
 
 buildscript {
     ext.java_version = JavaVersion.VERSION_1_8
-    ext.kotlin_version = '1.3.0'
+    ext.kotlin_version = '1.3.61'
     ext.version_code = 59
     repositories {
         google()
@@ -14,7 +14,7 @@ buildscript {
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0-alpha02'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
     }
 }
